# Rpi_Ard_ser

./: README.md  realsense_depth.py
install/: local_setup.sh  setup.sh
install/my_mav_pkg/lib/my_mav_pkg/: camera_publisher  pose_listener  send_arduino
install/my_mav_pkg/share/my_mav_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_mav_pkg/share/my_mav_pkg/launch/: realsense_ws.launch.py
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_msgs/share/px4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  px4_msgsConfig-version.cmake  px4_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/px4_msgs/share/px4_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/px4_msgs/share/px4_msgs/msg/: ActionRequest.idl  ActionRequest.msg  ActuatorArmed.idl  ActuatorArmed.msg  ActuatorControlsStatus.idl  ActuatorControlsStatus.msg  ActuatorMotors.idl  ActuatorMotors.msg  ActuatorOutputs.idl  ActuatorOutputs.msg  ActuatorServos.idl  ActuatorServos.msg  ActuatorServosTrim.idl  ActuatorServosTrim.msg  (+456 more)
log/: latest_build
src/my_mav_pkg/: package.xml  setup.cfg  setup.py
src/my_mav_pkg/my_mav_pkg/: pose_listener.py  send_arduino.py
(+3562 files in other folders)
