<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_mav_pkg</name>
  <version>0.0.0</version>
  <description>MAVROS utilities + RealSense → WebSocket launcher</description>
  <maintainer email="raft-controller@todo.todo">raft-controller</maintainer>
  <license>MIT</license>

  <!-- Core runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <!-- Needed to use .launch.py files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- RealSense + Foxglove (installed via apt) -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <!-- Tests (optional) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
